--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -7,7 +7,9 @@
 @import "typography";
 @import "region/header";
 @import "region/footer";
+@import "region/main";
 @import "mediaQueries/mediaQueries"
+
 
 	
 
