--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -22,6 +22,10 @@
 	color: $gray;
 	background-color: #eee;
 	padding: 5px 10px;
+	&:hover {
+		background-color: $dark !important;
+		color: $white !important;
+	}
 }
 
 @mixin asideSlider-card {
