--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -8,6 +8,7 @@
 @import "region/header";
 @import "region/footer";
 @import "region/main";
+@import "buttons/button.scss";
 @import "mediaQueries/mediaQueries"
 
 
