--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -8,8 +8,9 @@
 @import "region/header";
 @import "region/footer";
 @import "region/main";
-@import "buttons/button.scss";
-@import "mediaQueries/mediaQueries"
+@import "buttons/button";
+@import "hoverDropdown";
+@import "mediaQueries/mediaQueries";
 
 
 	
