--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -10,6 +10,7 @@
 @import "region/main";
 @import "buttons/button";
 @import "hoverDropdown";
+@import "animations";
 @import "mediaQueries/mediaQueries";
 
 
