--- a/src/scss/region/_header.scss
+++ b/src/scss/region/_header.scss
@@ -77,4 +77,8 @@ header {
 	left: 0;
 	right: 0;
 	z-index: 999;
+	animation-name: slideDown;
+	animation-duration: 1s;
+    animation-fill-mode: both;
+	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
 }
