--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -78,6 +78,18 @@
 	line-height: 20px !important;
 }
 
+.fs-16 {
+	font-size: 16px !important;	
+}
+
+.fs-18 {
+	font-size: 18px !important;
+}
+
+.fs-25 {
+	font-size: 25px !important;
+}
+
 .fw {
 	&-600 {
 		font-weight: 600;
