--- a/src/sass/region/_main.scss
+++ b/src/sass/region/_main.scss
@@ -16,6 +16,10 @@ main {
 			outline: 0;
 			border-color: #eee;
 		}
+		.faq {
+			margin: 20px 115px;
+			
+		}
 		.block-product {
 			@include section-title;
 		}
@@ -355,7 +359,12 @@ main {
 			right:0;
 			left: 0;
 		}
-		
+		.q-view {
+			margin-top: -100px;
+			margin-left: 30px;
+			z-index: 9999;
+
+		}
 		.v-hidden {
 			opacity: 0 !important;
 			&:hover {
