--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -11,4 +11,5 @@
 @import "buttons/button";
 @import "hoverDropdown";
 @import "animations";
+@import "cookie";
 @import "mediaQueries/mediaQueries";
