Contact and About us pages complete

--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -11,5 +11,5 @@
 @import "buttons/button";
 @import "hoverDropdown";
 @import "animations";
-@import "cookie";
+@import "contact";
 @import "mediaQueries/mediaQueries";
