--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -19,11 +19,11 @@ body {
 .current-tab {
 	padding-top: 10px;
     padding-left: 15px;
-    margin: 12px 0 15px;
+    margin: 15px 0 0;
     padding-bottom: 30px;
     background: 0 0;
     line-height: normal;
-    border-bottom: 1px solid #eee;
+    //border-bottom: 1px solid #eee;
 	span {
 		letter-spacing: .5px;
 	}
