--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -26,6 +26,9 @@
 	&-primary {
 		background-color: $primary !important;
 	}
+	&-darkgray {
+		background-color: $darkgray !important;
+	}
 }
 
 .pt {
